languages/EmbeddedMontiArcDynamics/src/test/resources/test/embeddedmontiarcdynamic/cocos/invalid/newInOutSideEvent/V1.emad
/* (c) https://github.com/MontiCore/monticore */

package newInOutSideEvent;

component V1 {

    ports
        in Q a,
        out Q b;

    connect a[?] -> b;

}
